# drive-gpt

./: README.md  pyproject.toml
drive_gpt/: __main__.py
